test_suite/tests/ui/borrow/no_lifetimes.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
struct Test {
    #[serde(borrow)]
    s: String,
}

fn main() {}
